data/test/type_check/fail/instantiation_3.v
// Undeclared explicit port

module foo(x);
  input wire x;
endmodule

wire x;
foo f(.y(x));

initial $finish;
